correcting the axilite registers for matt

--- a/firmware/common/PhaseCavity/SysgenFeatureReport.htm
+++ b/firmware/common/PhaseCavity/SysgenFeatureReport.htm
@@ -48,8 +48,8 @@
        sgBanner.src='File:////afs/slac.stanford.edu/g/reseng/xilinx/vivado_2017.4/Vivado/2017.4/data/sysgen/images/sgbanner.jpg';
        var modelName = 'exampleModel';
 var jTblExternally_Connected_Blocks = new Array();
- jTblExternally_Connected_Blocks[0] = { val1:"exampleModel/example/dsp/Cav1/cav1_nco_phase_adj",act1:"matlab:load_system('xbsIndex');xlHiliteOne('exampleModel/example/dsp/Cav1/cav1_nco_phase_adj');",val2:"gw_in_outport",act2:"" };
- jTblExternally_Connected_Blocks[1] = { val1:"exampleModel/example/dsp/Cav2/cav2_nco_phase_adj",act1:"matlab:load_system('xbsIndex');xlHiliteOne('exampleModel/example/dsp/Cav2/cav2_nco_phase_adj');",val2:"gw_in_outport",act2:"" };
+ jTblExternally_Connected_Blocks[0] = { val1:"exampleModel/example/Subsystem2/Register36",act1:"matlab:load_system('xbsIndex');xlHiliteOne('exampleModel/example/Subsystem2/Register36');",val2:"q",act2:"" };
+ jTblExternally_Connected_Blocks[1] = { val1:"exampleModel/example/Subsystem7/Register36",act1:"matlab:load_system('xbsIndex');xlHiliteOne('exampleModel/example/Subsystem7/Register36');",val2:"q",act2:"" };
  
        var maxStrLen = 35; 
        var displaymode = 0;
