--- a/firmware/common/PhaseCavity/netlist/sysgen/index.html
+++ b/firmware/common/PhaseCavity/netlist/sysgen/index.html
@@ -133,17 +133,6 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>u32 example_status_0_read(example *InstancePtr);</h1>
-<p>
- Read from status_0 gateway of example. Assignments are LSB-justified.<br/>
-<br/>
- @param	InstancePtr is the status_0 instance to operate on.<br/>
-<br/>
- @return	u32<br/>
-
- @note    .<br/>
-<br/>
-</p>
 <h1>int example_cav1_p1_amp_out_read(example *InstancePtr);</h1>
 <p>
  Read from cav1_p1_amp_out gateway of example. Assignments are LSB-justified.<br/>
@@ -294,6 +283,17 @@ Initialize example pointer with a specifc instance of the device based device id
  @param	InstancePtr is the cav1_p1_phase_out instance to operate on.<br/>
 <br/>
  @return	int<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_status_0_read(example *InstancePtr);</h1>
+<p>
+ Read from status_0 gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the status_0 instance to operate on.<br/>
+<br/>
+ @return	u32<br/>
 
  @note    .<br/>
 <br/>
@@ -738,11 +738,11 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>int example_cav1_p1_comparison_q_x0_read(example *InstancePtr);</h1>
+<h1>int example_cav1_p1_comparison_q1_read(example *InstancePtr);</h1>
 <p>
- Read from cav1_p1_comparison_q_x0 gateway of example. Assignments are LSB-justified.<br/>
+ Read from cav1_p1_comparison_q1 gateway of example. Assignments are LSB-justified.<br/>
 <br/>
- @param	InstancePtr is the cav1_p1_comparison_q_x0 instance to operate on.<br/>
+ @param	InstancePtr is the cav1_p1_comparison_q1 instance to operate on.<br/>
 <br/>
  @return	int<br/>
 
