--- a/firmware/common/PhaseCavity/netlist/sysgen/index.html
+++ b/firmware/common/PhaseCavity/netlist/sysgen/index.html
@@ -271,6 +271,29 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
+<h1>void example_cav2_p2_calibration_coeff_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to cav2_p2_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav2_p2_calibration_coeff instance to operate on.<br/>
+ @param	Data is value to be written to gateway cav2_p2_calibration_coeff.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_cav2_p2_calibration_coeff_read(example *InstancePtr);</h1>
+<p>
+ Read from cav2_p2_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav2_p2_calibration_coeff instance to operate on.<br/>
+<br/>
+ @return	u32<br/>
+
+ @note    .<br/>
+<br/>
+</p>
 <h1>void example_cav2_p1_window_stop_write(example *InstancePtr, u32 Data);</h1>
 <p>
  Write to cav2_p1_window_stop gateway of example. Assignments are LSB-justified.<br/>
@@ -336,6 +359,29 @@ Initialize example pointer with a specifc instance of the device based device id
  @param	InstancePtr is the cav2_p1_chan_sel instance to operate on.<br/>
 <br/>
  @return	u8<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_cav2_p1_calibration_coeff_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to cav2_p1_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav2_p1_calibration_coeff instance to operate on.<br/>
+ @param	Data is value to be written to gateway cav2_p1_calibration_coeff.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_cav2_p1_calibration_coeff_read(example *InstancePtr);</h1>
+<p>
+ Read from cav2_p1_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav2_p1_calibration_coeff instance to operate on.<br/>
+<br/>
+ @return	u32<br/>
 
  @note    .<br/>
 <br/>
@@ -455,6 +501,29 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
+<h1>void example_cav1_p2_calibration_coeff_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to cav1_p2_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav1_p2_calibration_coeff instance to operate on.<br/>
+ @param	Data is value to be written to gateway cav1_p2_calibration_coeff.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_cav1_p2_calibration_coeff_read(example *InstancePtr);</h1>
+<p>
+ Read from cav1_p2_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav1_p2_calibration_coeff instance to operate on.<br/>
+<br/>
+ @return	u32<br/>
+
+ @note    .<br/>
+<br/>
+</p>
 <h1>void example_cav1_p1_window_stop_write(example *InstancePtr, u32 Data);</h1>
 <p>
  Write to cav1_p1_window_stop gateway of example. Assignments are LSB-justified.<br/>
@@ -520,6 +589,29 @@ Initialize example pointer with a specifc instance of the device based device id
  @param	InstancePtr is the cav1_p1_chan_sel instance to operate on.<br/>
 <br/>
  @return	u8<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_cav1_p1_calibration_coeff_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to cav1_p1_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav1_p1_calibration_coeff instance to operate on.<br/>
+ @param	Data is value to be written to gateway cav1_p1_calibration_coeff.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_cav1_p1_calibration_coeff_read(example *InstancePtr);</h1>
+<p>
+ Read from cav1_p1_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav1_p1_calibration_coeff instance to operate on.<br/>
+<br/>
+ @return	u32<br/>
 
  @note    .<br/>
 <br/>
