adding debug stream mux

--- a/firmware/common/PhaseCavity/netlist/sysgen/index.html
+++ b/firmware/common/PhaseCavity/netlist/sysgen/index.html
@@ -110,69 +110,184 @@ Initialize example pointer with a specifc instance of the device based device id
   @return int XST_SUCCESS if initialization is successful
 <br/>
 </p>
-<h1>void example_cav1_freq_eval_stop_write(example *InstancePtr, u32 Data);</h1>
+<h1>void example_wfdata_7_sel_write(example *InstancePtr, u8 Data);</h1>
 <p>
- Write to cav1_freq_eval_stop gateway of example. Assignments are LSB-justified.<br/>
+ Write to wfdata_7_sel gateway of example. Assignments are LSB-justified.<br/>
 <br/>
- @param	InstancePtr is the cav1_freq_eval_stop instance to operate on.<br/>
- @param	Data is value to be written to gateway cav1_freq_eval_stop.<br/>
+ @param	InstancePtr is the wfdata_7_sel instance to operate on.<br/>
+ @param	Data is value to be written to gateway wfdata_7_sel.<br/>
 <br/>
  @return	None.<br/>
 <br/>
  @note    .<br/>
 <br/>
 </p>
-<h1>u32 example_cav1_freq_eval_stop_read(example *InstancePtr);</h1>
+<h1>u8 example_wfdata_7_sel_read(example *InstancePtr);</h1>
 <p>
- Read from cav1_freq_eval_stop gateway of example. Assignments are LSB-justified.<br/>
+ Read from wfdata_7_sel gateway of example. Assignments are LSB-justified.<br/>
 <br/>
- @param	InstancePtr is the cav1_freq_eval_stop instance to operate on.<br/>
+ @param	InstancePtr is the wfdata_7_sel instance to operate on.<br/>
+<br/>
+ @return	u8<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_wfdata_6_sel_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to wfdata_6_sel gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the wfdata_6_sel instance to operate on.<br/>
+ @param	Data is value to be written to gateway wfdata_6_sel.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_wfdata_6_sel_read(example *InstancePtr);</h1>
+<p>
+ Read from wfdata_6_sel gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the wfdata_6_sel instance to operate on.<br/>
 <br/>
  @return	u32<br/>
 
  @note    .<br/>
 <br/>
 </p>
-<h1>void example_cav1_freq_eval_start_write(example *InstancePtr, u32 Data);</h1>
+<h1>void example_wfdata_5_sel_write(example *InstancePtr, u32 Data);</h1>
 <p>
- Write to cav1_freq_eval_start gateway of example. Assignments are LSB-justified.<br/>
+ Write to wfdata_5_sel gateway of example. Assignments are LSB-justified.<br/>
 <br/>
- @param	InstancePtr is the cav1_freq_eval_start instance to operate on.<br/>
- @param	Data is value to be written to gateway cav1_freq_eval_start.<br/>
+ @param	InstancePtr is the wfdata_5_sel instance to operate on.<br/>
+ @param	Data is value to be written to gateway wfdata_5_sel.<br/>
 <br/>
  @return	None.<br/>
 <br/>
  @note    .<br/>
 <br/>
 </p>
-<h1>u32 example_cav1_freq_eval_start_read(example *InstancePtr);</h1>
+<h1>u32 example_wfdata_5_sel_read(example *InstancePtr);</h1>
 <p>
- Read from cav1_freq_eval_start gateway of example. Assignments are LSB-justified.<br/>
+ Read from wfdata_5_sel gateway of example. Assignments are LSB-justified.<br/>
 <br/>
- @param	InstancePtr is the cav1_freq_eval_start instance to operate on.<br/>
+ @param	InstancePtr is the wfdata_5_sel instance to operate on.<br/>
 <br/>
  @return	u32<br/>
 
  @note    .<br/>
 <br/>
 </p>
-<h1>void example_cav1_reg_latch_pt_write(example *InstancePtr, u32 Data);</h1>
+<h1>void example_wfdata_4_sel_write(example *InstancePtr, u8 Data);</h1>
 <p>
- Write to cav1_reg_latch_pt gateway of example. Assignments are LSB-justified.<br/>
+ Write to wfdata_4_sel gateway of example. Assignments are LSB-justified.<br/>
 <br/>
- @param	InstancePtr is the cav1_reg_latch_pt instance to operate on.<br/>
- @param	Data is value to be written to gateway cav1_reg_latch_pt.<br/>
+ @param	InstancePtr is the wfdata_4_sel instance to operate on.<br/>
+ @param	Data is value to be written to gateway wfdata_4_sel.<br/>
 <br/>
  @return	None.<br/>
 <br/>
  @note    .<br/>
 <br/>
 </p>
-<h1>u32 example_cav1_reg_latch_pt_read(example *InstancePtr);</h1>
+<h1>u8 example_wfdata_4_sel_read(example *InstancePtr);</h1>
 <p>
- Read from cav1_reg_latch_pt gateway of example. Assignments are LSB-justified.<br/>
+ Read from wfdata_4_sel gateway of example. Assignments are LSB-justified.<br/>
 <br/>
- @param	InstancePtr is the cav1_reg_latch_pt instance to operate on.<br/>
+ @param	InstancePtr is the wfdata_4_sel instance to operate on.<br/>
+<br/>
+ @return	u8<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_wfdata_3_sel_write(example *InstancePtr, u8 Data);</h1>
+<p>
+ Write to wfdata_3_sel gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the wfdata_3_sel instance to operate on.<br/>
+ @param	Data is value to be written to gateway wfdata_3_sel.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u8 example_wfdata_3_sel_read(example *InstancePtr);</h1>
+<p>
+ Read from wfdata_3_sel gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the wfdata_3_sel instance to operate on.<br/>
+<br/>
+ @return	u8<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_wfdata_2_sel_write(example *InstancePtr, u8 Data);</h1>
+<p>
+ Write to wfdata_2_sel gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the wfdata_2_sel instance to operate on.<br/>
+ @param	Data is value to be written to gateway wfdata_2_sel.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u8 example_wfdata_2_sel_read(example *InstancePtr);</h1>
+<p>
+ Read from wfdata_2_sel gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the wfdata_2_sel instance to operate on.<br/>
+<br/>
+ @return	u8<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_wfdata_1_sel_write(example *InstancePtr, u8 Data);</h1>
+<p>
+ Write to wfdata_1_sel gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the wfdata_1_sel instance to operate on.<br/>
+ @param	Data is value to be written to gateway wfdata_1_sel.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u8 example_wfdata_1_sel_read(example *InstancePtr);</h1>
+<p>
+ Read from wfdata_1_sel gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the wfdata_1_sel instance to operate on.<br/>
+<br/>
+ @return	u8<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_wfdata_0_sel_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to wfdata_0_sel gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the wfdata_0_sel instance to operate on.<br/>
+ @param	Data is value to be written to gateway wfdata_0_sel.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_wfdata_0_sel_read(example *InstancePtr);</h1>
+<p>
+ Read from wfdata_0_sel gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the wfdata_0_sel instance to operate on.<br/>
 <br/>
  @return	u32<br/>
 
@@ -248,52 +363,6 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>void example_cav2_freq_eval_stop_write(example *InstancePtr, u32 Data);</h1>
-<p>
- Write to cav2_freq_eval_stop gateway of example. Assignments are LSB-justified.<br/>
-<br/>
- @param	InstancePtr is the cav2_freq_eval_stop instance to operate on.<br/>
- @param	Data is value to be written to gateway cav2_freq_eval_stop.<br/>
-<br/>
- @return	None.<br/>
-<br/>
- @note    .<br/>
-<br/>
-</p>
-<h1>u32 example_cav2_freq_eval_stop_read(example *InstancePtr);</h1>
-<p>
- Read from cav2_freq_eval_stop gateway of example. Assignments are LSB-justified.<br/>
-<br/>
- @param	InstancePtr is the cav2_freq_eval_stop instance to operate on.<br/>
-<br/>
- @return	u32<br/>
-
- @note    .<br/>
-<br/>
-</p>
-<h1>void example_cav2_freq_eval_start_write(example *InstancePtr, u32 Data);</h1>
-<p>
- Write to cav2_freq_eval_start gateway of example. Assignments are LSB-justified.<br/>
-<br/>
- @param	InstancePtr is the cav2_freq_eval_start instance to operate on.<br/>
- @param	Data is value to be written to gateway cav2_freq_eval_start.<br/>
-<br/>
- @return	None.<br/>
-<br/>
- @note    .<br/>
-<br/>
-</p>
-<h1>u32 example_cav2_freq_eval_start_read(example *InstancePtr);</h1>
-<p>
- Read from cav2_freq_eval_start gateway of example. Assignments are LSB-justified.<br/>
-<br/>
- @param	InstancePtr is the cav2_freq_eval_start instance to operate on.<br/>
-<br/>
- @return	u32<br/>
-
- @note    .<br/>
-<br/>
-</p>
 <h1>void example_cav2_p2_window_stop_write(example *InstancePtr, u32 Data);</h1>
 <p>
  Write to cav2_p2_window_stop gateway of example. Assignments are LSB-justified.<br/>
@@ -363,7 +432,7 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>void example_cav2_p2_calibration_coeff_write(example *InstancePtr, u32 Data);</h1>
+<h1>void example_cav2_p2_calibration_coeff_write(example *InstancePtr, int Data);</h1>
 <p>
  Write to cav2_p2_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
 <br/>
@@ -375,13 +444,13 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>u32 example_cav2_p2_calibration_coeff_read(example *InstancePtr);</h1>
+<h1>int example_cav2_p2_calibration_coeff_read(example *InstancePtr);</h1>
 <p>
  Read from cav2_p2_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
 <br/>
  @param	InstancePtr is the cav2_p2_calibration_coeff instance to operate on.<br/>
 <br/>
- @return	u32<br/>
+ @return	int<br/>
 
  @note    .<br/>
 <br/>
@@ -455,7 +524,7 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>void example_cav2_p1_calibration_coeff_write(example *InstancePtr, u32 Data);</h1>
+<h1>void example_cav2_p1_calibration_coeff_write(example *InstancePtr, int Data);</h1>
 <p>
  Write to cav2_p1_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
 <br/>
@@ -467,13 +536,13 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>u32 example_cav2_p1_calibration_coeff_read(example *InstancePtr);</h1>
+<h1>int example_cav2_p1_calibration_coeff_read(example *InstancePtr);</h1>
 <p>
  Read from cav2_p1_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
 <br/>
  @param	InstancePtr is the cav2_p1_calibration_coeff instance to operate on.<br/>
 <br/>
- @return	u32<br/>
+ @return	int<br/>
 
  @note    .<br/>
 <br/>
@@ -518,6 +587,75 @@ Initialize example pointer with a specifc instance of the device based device id
  Read from cav2_nco_phase_adj gateway of example. Assignments are LSB-justified.<br/>
 <br/>
  @param	InstancePtr is the cav2_nco_phase_adj instance to operate on.<br/>
+<br/>
+ @return	u32<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_cav2_freq_eval_stop_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to cav2_freq_eval_stop gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav2_freq_eval_stop instance to operate on.<br/>
+ @param	Data is value to be written to gateway cav2_freq_eval_stop.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_cav2_freq_eval_stop_read(example *InstancePtr);</h1>
+<p>
+ Read from cav2_freq_eval_stop gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav2_freq_eval_stop instance to operate on.<br/>
+<br/>
+ @return	u32<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_cav2_freq_eval_start_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to cav2_freq_eval_start gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav2_freq_eval_start instance to operate on.<br/>
+ @param	Data is value to be written to gateway cav2_freq_eval_start.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_cav2_freq_eval_start_read(example *InstancePtr);</h1>
+<p>
+ Read from cav2_freq_eval_start gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav2_freq_eval_start instance to operate on.<br/>
+<br/>
+ @return	u32<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_cav1_reg_latch_pt_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to cav1_reg_latch_pt gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav1_reg_latch_pt instance to operate on.<br/>
+ @param	Data is value to be written to gateway cav1_reg_latch_pt.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_cav1_reg_latch_pt_read(example *InstancePtr);</h1>
+<p>
+ Read from cav1_reg_latch_pt gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav1_reg_latch_pt instance to operate on.<br/>
 <br/>
  @return	u32<br/>
 
@@ -593,7 +731,7 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>void example_cav1_p2_calibration_coeff_write(example *InstancePtr, u32 Data);</h1>
+<h1>void example_cav1_p2_calibration_coeff_write(example *InstancePtr, int Data);</h1>
 <p>
  Write to cav1_p2_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
 <br/>
@@ -605,13 +743,13 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>u32 example_cav1_p2_calibration_coeff_read(example *InstancePtr);</h1>
+<h1>int example_cav1_p2_calibration_coeff_read(example *InstancePtr);</h1>
 <p>
  Read from cav1_p2_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
 <br/>
  @param	InstancePtr is the cav1_p2_calibration_coeff instance to operate on.<br/>
 <br/>
- @return	u32<br/>
+ @return	int<br/>
 
  @note    .<br/>
 <br/>
@@ -685,7 +823,7 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>void example_cav1_p1_calibration_coeff_write(example *InstancePtr, u32 Data);</h1>
+<h1>void example_cav1_p1_calibration_coeff_write(example *InstancePtr, int Data);</h1>
 <p>
  Write to cav1_p1_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
 <br/>
@@ -697,13 +835,13 @@ Initialize example pointer with a specifc instance of the device based device id
  @note    .<br/>
 <br/>
 </p>
-<h1>u32 example_cav1_p1_calibration_coeff_read(example *InstancePtr);</h1>
+<h1>int example_cav1_p1_calibration_coeff_read(example *InstancePtr);</h1>
 <p>
  Read from cav1_p1_calibration_coeff gateway of example. Assignments are LSB-justified.<br/>
 <br/>
  @param	InstancePtr is the cav1_p1_calibration_coeff instance to operate on.<br/>
 <br/>
- @return	u32<br/>
+ @return	int<br/>
 
  @note    .<br/>
 <br/>
@@ -748,6 +886,52 @@ Initialize example pointer with a specifc instance of the device based device id
  Read from cav1_nco_phase_adj gateway of example. Assignments are LSB-justified.<br/>
 <br/>
  @param	InstancePtr is the cav1_nco_phase_adj instance to operate on.<br/>
+<br/>
+ @return	u32<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_cav1_freq_eval_stop_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to cav1_freq_eval_stop gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav1_freq_eval_stop instance to operate on.<br/>
+ @param	Data is value to be written to gateway cav1_freq_eval_stop.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_cav1_freq_eval_stop_read(example *InstancePtr);</h1>
+<p>
+ Read from cav1_freq_eval_stop gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav1_freq_eval_stop instance to operate on.<br/>
+<br/>
+ @return	u32<br/>
+
+ @note    .<br/>
+<br/>
+</p>
+<h1>void example_cav1_freq_eval_start_write(example *InstancePtr, u32 Data);</h1>
+<p>
+ Write to cav1_freq_eval_start gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav1_freq_eval_start instance to operate on.<br/>
+ @param	Data is value to be written to gateway cav1_freq_eval_start.<br/>
+<br/>
+ @return	None.<br/>
+<br/>
+ @note    .<br/>
+<br/>
+</p>
+<h1>u32 example_cav1_freq_eval_start_read(example *InstancePtr);</h1>
+<p>
+ Read from cav1_freq_eval_start gateway of example. Assignments are LSB-justified.<br/>
+<br/>
+ @param	InstancePtr is the cav1_freq_eval_start instance to operate on.<br/>
 <br/>
  @return	u32<br/>
 
